--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
     <h2>We're launching soon</h2>
     <div class="timer-box">
       <div class="box-container">
-        <div class="box-item days">08</div>
+        <div class="box-item days"><span>08</span></div>
         <p>Days</p>
       </div>
 
       <div class="box-container">
-        <div class="box-item hours">23</div>
+        <div class="box-item hours"><span>23</span></div>
         <p>Hours</p>
       </div>
 
       <div class="box-container">
         <!-- contenteditable="true" -->
-        <div class="box-item minutes">55</div>
+        <div class="box-item minutes"><span>55</span></div>
         <p>Minutes</p>
       </div>
 
       <div class="box-container">
-        <div class="box-item seconds">41</div>
+        <div class="box-item seconds"><span>41</span></div>
         <p>Seconds</p>
       </div>
     </div>
